# typeset-c

./: .gitignore  CMakeLists.txt  README.md  build.sh  gen_docs.sh
docs/: conf.py  index.rst
include/: arena.h  document.h  layout.h  typeset.h
src/: arena_unix.c  arena_windows.c  document.c  layout.c  typeset.c
